@@ -21,14 +21,6 @@ static def getJDK() { Jvm.current().getJavaHome().path }
 
 mainClassName = "launcher.DesktopLauncher"
 
-// Determine where the JDK is going to be (Windows/Linux and Mac)
-def jdkFolder = "${projectDir}/build/jdk"
-def runtimePath = osName().contains('mac') ? "${buildDir}/jre/contents/plugins/Java.runtime/Contents/Home" : "${buildDir}/jre"
-def distributionPath = "${buildDir}/distributionRelease/"
-def jpackagePath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk/Contents/Home/bin/jpackage" : "${jdkFolder}/jdk-14/bin/jpackage"
-def jdkPath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk" : "${jdkFolder}/jdk-14"
-
-
 if (osName().contains('mac')) {
     run {
         jvmArgs += '-XstartOnFirstThread'
@@ -44,134 +36,18 @@ task dist(type: Jar) {
     }
 }
 
+tasks.distZip.doLast {
+
+	copy {
+		
+		// Ese .JAR que viene en el zip no me sirve.
+		from zipTree("${buildDir}/distributions/desktop-${project.version}.zip").matching { include "*.jar" exclude "desktop-${project.version}.jar" }
+		into "${buildDir}/libs"
+		
+	}
+
+}
+
 dist.dependsOn classes
 run.dependsOn classes
 
-// creates a replacement runtime via jlink command (much smaller than jpackage)
-task jlink(type: Exec, dependsOn: build) {
-
-    doFirst {
-        download {
-
-            if (osName().contains('windows')) {
-                src 'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-49_windows-x64_bin.zip'
-            } else if (osName().contains('linux')) {
-                src 'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-49_linux-x64_bin.tar.gz'
-            } else if (osName().contains('mac')) {
-                src 'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-49_osx-x64_bin.tar.gz'
-            }
-
-            if (!file(jdkFolder).exists()) {
-                file(jdkFolder).mkdirs()
-            }
-            dest jdkFolder
-            overwrite false
-        }
-
-        if (!file(jdkPath).exists()) {
-            copy {
-
-                if (osName().contains('windows')) {
-                    from zipTree("${jdkFolder}/openjdk-14-jpackage+1-49_windows-x64_bin.zip")
-                } else if (osName().contains('linux')) {
-                    from tarTree("${jdkFolder}/openjdk-14-jpackage+1-49_linux-x64_bin.tar.gz")
-                } else if (osName().contains('mac')) {
-                    from tarTree("${jdkFolder}/openjdk-14-jpackage+1-49_osx-x64_bin.tar.gz")
-                }
-
-                into jdkFolder
-            }
-        }
-    }
-
-    // Overwrite previous packaged application.
-    if (file(distributionPath).exists()) {
-        delete(file(distributionPath))
-    }
-
-    // Overwrite previous bundled jre.
-    if (file(runtimePath).exists()) {
-        delete(files(runtimePath))
-    }
-
-    commandLine = [
-            getJDK().concat("/bin/jlink"),
-            '--module-path', getJDK().concat("/jmods"),
-            '--add-modules', 'java.base,java.desktop,jdk.unsupported,java.logging',
-            '--strip-debug',
-            '--no-header-files',
-            '--no-man-pages',
-            '--strip-native-commands',
-            '--vm=server',
-            '--compress=2',
-            '--output', runtimePath
-    ]
-	
-	doLast {
-        // Final debloat for jpackage
-        delete(file("${runtimePath}/conf"))
-        delete(file("${runtimePath}/legal"))
-        delete fileTree("${runtimePath}/bin").matching { include "api*.dll" }
-    }
-	
-}
-
-// creates application bundle (executable + runtime)
-task appBundle(type: Exec, dependsOn: jlink) {
-
-    doFirst {
-        System.out.println("Runtime Path: " + runtimePath)
-        System.out.println("Distribution Path: " + distributionPath)
-        System.out.println("Jpackage Path: " + jpackagePath)
-        System.out.println("Jdk Path: " + jdkPath)
-    }
-
-    def commands = [
-            jpackagePath,
-            '--package-type', 'app-image',
-            '--name', project.appName,
-            '--vendor', "Argentum Online Libre",
-            '--app-version', "${project.version}",
-            '--dest', distributionPath,
-            '--runtime-image', runtimePath,
-            '--input', "${buildDir}${File.separator}libs",
-            '--main-class', project.mainClassName,
-            '--main-jar', "desktop-${project.version}.jar",
-    ]
-
-    if (osName().contains('windows')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.ico"
-    } else if (osName().contains('linux')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.png"
-    } else if (osName().contains('mac')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.icns"
-        commands << "--java-options"
-        commands << "-XstartOnFirstThread"
-    }
-
-    commandLine = commands
-
-    doLast() {
-	
-        copy {
-            from("${projectDir}/Config.json")
-			from files("${projectDir}/assets")
-            if (osName().contains('mac')) {
-                into("${distributionPath}${project.appName}/Contents/Resources/")
-            } else {
-                into("${distributionPath}${project.appName}")
-            }
-        }
-		
-		// Debloat for Windows users.
-        delete fileTree("${distributionPath}/${project.appName}/bin").matching { include "*.dll" exclude "applauncher.dll" }
-        delete fileTree("${distributionPath}/${project.appName}/app").matching { include "api*.dll" }
-		delete file("${distributionPath}/${project.appName}/.jpackage.xml")
-
-        System.out.println("Application '${project.appName}' packaged.")
-        System.out.println(" -> location: ${distributionPath}${project.appName}/")
-    }
-}
